# university-meal-system

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: main.cpp
config/: config_path.json
include/: admin.hpp  admin_panel.hpp  dining_hall.hpp  meal.hpp  panel.hpp  reservation.hpp  session_manager.hpp  shopping_cart.hpp  storage.hpp  student.h  student.hpp  transaction.hpp  user.hpp
include/core/: session_manager.hpp
include/data/: config_path.hpp  log_entry.hpp  log_level.hpp  log_manager.hpp  logger.hpp  session_file_manager.hpp  storage.hpp  storage_file_manager.hpp  system_log.hpp  user_file_manager.hpp
include/models/: admin.hpp  meal.hpp  reservation.hpp  shopping_cart.hpp  student.hpp  transaction.hpp  user.hpp
include/panels/: admin_panel.hpp  student_panel.hpp
src/: admin_panel.cpp  admin_session.cpp  dining_hall.cpp  main.cpp  meal.cpp  panel.cpp  reservation.cpp  session_manager.cpp  shopping_cart.cpp  storage.cpp  student.cpp  student_panel.cpp  student_session.cpp  transaction.cpp  user.cpp
src/core/: admin_session.cpp  session_manager.cpp  student_session.cpp
src/data/: config_path.cpp  log_manager.cpp  session_file_manage.cpp  storage.cpp  storage_file_manager.cpp  system_log.cpp  user_file_manager.cpp
src/models/: admin.cpp  dining_hall.cpp  meal.cpp  reservation.cpp  shopping_cart.cpp  student.cpp  transaction.cpp  user.cpp
src/panels/: admin_panel.cpp  student_panel.cpp
tests/: test_dining_hall.cpp  test_hpass.cpp  test_meal.cpp  test_reservation.cpp  test_student.cpp
